adicionado a funcionalidade de recarregar a página no ícone do GitHub

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <main>
-        <i class="devicon-github-original"></i>
+        <a href="" class="github-icon"><i class="devicon-github-original"></i></a>
 
         <section class="container">
             <header>
