alteração nas cores e mudança no alerta de campo obrigatório

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <header>
                 <h2>Buscar Usuário</h2>
                 <input type="text" id="input-search" placeholder="Digite o nome do usuário no GitHub">
+                <p class="alert hide">*Preencha o campo com o nome do usuário do GitHub</p>
                 <input type="button" value="Buscar" id="btn-search">
             </header>
 
